cmake_minimum_required(VERSION 3.22)
project(DataStructures)

set(CMAKE_CXX_STANDARD 23)

add_executable(1.1   Ex1/1.1.cpp)
add_executable(2.1   Ex2/2.1.cpp)
add_executable(2.2   Ex2/2.2.cpp)
add_executable(2.3   Ex2/2.3.cpp)
add_executable(3.1-1  Ex3/3.1-1.cpp)
add_executable(3.1-3  Ex3/3.1-3.cpp)
add_executable(3.2-2  Ex3/3.2-2.cpp)
