[package]
name = "icpc_member_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "13.0.0"
colored = "2.0.4"
rusqlite = { version = "0.30.0", features = ["bundled"] }
chrono = "0.4"
prettytable = "0.10.0"
